# MyConvergio

./: .claude-snapshot-baseline.json  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .myconvergio-manifest.json  .npmignore  .shellcheckrc  AGENT-ROUTING.md  AGENTS.md  CHANGELOG-archive.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  EXECUTOR_TRACKING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  Jan10Plan2.md  MASTER_STATUS.md  MESH_CODEBASE_MAP.md  MESH_FILES_INVENTORY.md  MESH_QUICK_REFERENCE.md  Makefile  OPTIMIZATION-ROADMAP.md  PERF-DOCS-INDEX.md  PERFORMANCE-ANALYSIS.md  PERFORMANCE-SUMMARY.txt  PLANNER-ARCHITECTURE.md  QUICK-REFERENCE.txt  README.md  README_MESH_MAP.md  RELEASE_NOTES_3.6.0.md  SECURITY.md  SECURITY_AUDIT_EXECUTIVE_SUMMARY.md  SECURITY_AUDIT_MESH_599.md  TEST_PLAN.md  TROUBLESHOOTING.md  VERSION  WAVE5_COMPLETION_REPORT.md  (+22 more)
rust/claude-core/: Cargo.toml
rust/claude-core/benches/: mesh.rs
rust/claude-core/src/: lib.rs  main.rs
rust/claude-core/src/db/: cli.rs  crdt.rs  mod.rs  models.rs  queries.rs  service.rs  tests.rs
rust/claude-core/src/digest/: cache.rs  mod.rs
rust/claude-core/src/hooks/: checks.rs  checks_support.rs  mod.rs
rust/claude-core/src/lock/: mod.rs  tests.rs
rust/claude-core/src/mesh/: auth.rs  daemon.rs  daemon_sync.rs  daemon_tests.rs  handoff.rs  handoff_ssh.rs  handoff_tests.rs  http_api.rs  intelligence.rs  mod.rs  net.rs  observability.rs  sandbox.rs  sync.rs  sync_batch.rs  ws.rs  (+1 more)
rust/claude-core/tests/: ported_get_routes.rs  ported_non_get_routes.rs  ported_route_contracts.rs
(+2653 files in other folders)
