[package]
name = "claude-core"
version = "11.5.0"
edition = "2021"

[lib]
name = "claude_core"
path = "src/lib.rs"

[[bin]]
name = "claude-core"
path = "src/main.rs"

[[bench]]
name = "mesh"
harness = false

[features]
default = ["crsqlite"]
crsqlite = []

[dependencies]
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "functions", "load_extension"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
tokio = { version = "1.44", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
socket2 = "0.5"
libc = "0.2"
ratatui = "0.30"
base64 = "0.22.1"
serde_bytes = "0.11.19"

[dev-dependencies]
tower = "0.5"
